소셜 로그인 기능 수정